--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,9 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine.
 # See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-
-version: 2.1
 orbs:
   cypress: cypress-io/cypress@1
-workflows:
-  build:
-    jobs:
-      - cypress/run
+  
 
 
 # Define a job to be invoked later in a workflow.
@@ -33,3 +28,6 @@ workflows:
   say-hello-workflow:
     jobs:
       - say-hello
+  test:
+    jobs:
+      - cypress/run
