--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,33 +1,34 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 orbs:
-  cypress: cypress-io/cypress@1
-  
-
-
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
+  cypress: cypress-io/cypress@1.29.0
+  heroku: circleci/heroku@1.2.6
 jobs:
-  say-hello:
-    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
-    docker:
-      - image: cimg/base:stable
-    # Add steps to the job
-    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
+  deploy:
+    executor: heroku/default
     steps:
       - checkout
+      - heroku/install
       - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
-
-# Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
+          command: >
+            echo “The command above installs Heroku, the command below deploys.
+            What you do inbetween is up to you!”
+      - heroku/deploy-via-git
 workflows:
-  say-hello-workflow:
+  test_and_heroku_deploy:
     jobs:
-      - say-hello
-  test:
-    jobs:
-      - cypress/run
+      - cypress/install:
+          build: ‘npm run build’ # run a custom app build step
+          # start: npm start
+      - cypress/run:
+          requires:
+            - cypress/install
+          parallel: true # split all specs across machines
+          parallelism: 4 # use 4 CircleCI machines to finish quickly
+          group: ‘all tests’ # name this group “all tests” on the dashboard
+          start: ‘npm start’ # start server before running tests
+      - deploy:
+          requires:
+            - cypress/run
+          filters:
+            branches:
+              only: main
