--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,9 +17,9 @@ jobs:
 workflows:
   test_and_heroku_deploy:
     jobs:
-#       - cypress/install:
-#           build: ‘npm run build’ # run a custom app build step
-          # start: npm start
+      - cypress/install:
+          build: ‘npm run build’ # run a custom app build step
+          start: npm start
       - cypress/run:
           requires:
             - cypress/install
