--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ workflows:
   build:
     jobs:
       - cypress/install:
-           build: “npm run build”
+           build: “npm run cypress”
       - cypress/run:
            record: true
            parallel: true
