--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,55 +1,34 @@
 version: 2.1
 orbs:
   cypress: cypress-io/cypress@1.29.0
+  heroku: circleci/heroku@1.2.6
+jobs:
+  deploy:
+    executor: heroku/default
+    steps:
+      - checkout
+      - heroku/install
+      - run:
+          command: >
+            echo “The command above installs Heroku, the command below deploys.
+            What you do inbetween is up to you!”
+      - heroku/deploy-via-git
 workflows:
-  build:
+  test_and_heroku_deploy:
     jobs:
-      # first get the source code and install npm dependencies
       - cypress/install:
-          # run a custom app build step
-          build: 'npm run build'
+          build: ‘npm run build’ # run a custom app build step
+          start: npm start
       - cypress/run:
-          # make sure app has been installed and built
-          # before running tests across multiple machines
-          # this avoids installing same dependencies 10 times
           requires:
             - cypress/install
-          record: true # record results on Cypress Dashboard
           parallel: true # split all specs across machines
           parallelism: 4 # use 4 CircleCI machines to finish quickly
-          group: 'all tests' # name this group "all tests" on the dashboard
-          start: 'npm start' # start server before running tests
-# version: 2.1
-# orbs:
-#   cypress: cypress-io/cypress@1.29.0
-#   heroku: circleci/heroku@1.2.6
-# jobs:
-#   deploy:
-#     executor: heroku/default
-#     steps:
-#       - checkout
-#       - heroku/install
-#       - run:
-#           command: >
-#             echo “The command above installs Heroku, the command below deploys.
-#             What you do inbetween is up to you!”
-#       - heroku/deploy-via-git
-# workflows:
-#   test_and_heroku_deploy:
-#     jobs:
-#       - cypress/install:
-#           build: ‘npm run build’ # run a custom app build step
-#           start: npm start
-#       - cypress/run:
-#           requires:
-#             - cypress/install
-#           parallel: true # split all specs across machines
-#           parallelism: 4 # use 4 CircleCI machines to finish quickly
-#           group: ‘all tests’ # name this group “all tests” on the dashboard
-#           start: ‘npm start’ # start server before running tests
-#       - deploy:
-#           requires:
-#             - cypress/run
-#           filters:
-#             branches:
-#               only: main
+          group: ‘all tests’ # name this group “all tests” on the dashboard
+          start: ‘npm start’ # start server before running tests
+      - deploy:
+          requires:
+            - cypress/run
+          filters:
+            branches:
+              only: main
