--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,12 +7,11 @@ workflows:
     jobs:
       - cypress/install:
           build: ‘npm run build’ # run a custom app build step
-          start: npm start
       - cypress/run:
           requires:
             - cypress/install
           parallel: true # split all specs across machines
           parallelism: 4 # use 4 CircleCI machines to finish quickly
           group: ‘all tests’ # name this group “all tests” on the dashboard
-          start: ‘cypress run’ # start server before running tests
+          start: ‘npm run test:e2e’ # start server before running tests
      
