--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,9 @@ orbs:
 workflows:
   build:
     jobs:
+      - cypress/install:
+          build: ‘npm run dev’ # run a custom app build step
       - cypress/run:
           start: npm run test:e2e
-          wait-on: npm run dev
+          wait-on: 'http://localhost:3000/'
           
