--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,5 +23,5 @@ workflows:
     jobs:
       - cypress/run:
           start: npm run test:e2e
-          wait-on: 'http://localhost:3000/'
+          # wait-on: 'http://localhost:3000/'
           
