--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,6 @@ workflows:
   build:
     jobs:
       - cypress/run:
-          start: npm run test:e2e
-          # wait-on: 'http://localhost:3000/'
+          start: npm run dev
+          wait-on: 'http://localhost:3000/'
           
