--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,7 +60,7 @@ workflows:
   test_and_heroku_deploy:
     jobs:
       - cypress/install:
-          build: ‘npm run build’ # run a custom app build step
+          build: ‘npm run dev’ # run a custom app build step
           # start: npm start
       - cypress/run:
           requires:
