--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,8 +37,12 @@ orbs:
 workflows:
   build:
     jobs:
+      - cypress/install:
+          build: npm run build # run a custom app build step
       - cypress/run:
+          requires: 
+            - cypress/install
           start: npm start
           command: npm run test:e2e
-          wait-on: 'http://localhost:3000'
+        
 
