--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,7 @@ workflows:
   build:
     jobs:
       - cypress/install:
-          build: npm run build # run a custom app build step
+          build: npm run dev # run a custom app build step
       - cypress/run:
           requires: 
             - cypress/install
