--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,11 +38,11 @@ workflows:
   build:
     jobs:
       - cypress/install:
-          build: npm run dev # run a custom app build step
+          build: npm run build # run a custom app build step
       - cypress/run:
           requires: 
             - cypress/install
-          start: npm start
-          command: npm run test:e2e
+          start: npm run test:e2e
+          
         
 
