--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test:unit": "cypress open-ct",
     "test:unit:ci": "cypress run-ct --quiet --reporter spec",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "start": "npm run dev"
+    "start": "vue-cli-service serve"
   },
   "dependencies": {
     "vue": "^3.2.31",
